Personen anfänglich eingefügt

--- a/style.css
+++ b/style.css
@@ -111,6 +111,38 @@ html{
     color: red;
 }
 
+#candidates-overlay{
+    grid-column-start: 7;
+    grid-column-end: 30;
+    grid-row-start: 5;
+    grid-row-end: 20;
+    border: 8px black double;
+    border-radius: 8px;
+    background-color: white;
+    overflow: visible;
+    display: grid;
+    gap: 5px;
+    padding: 10px;
+}
+
+#solve-overlay{
+    grid-column-start: 7;
+    grid-column-end: 30;
+    grid-row-start: 5;
+    grid-row-end: 20;
+    border: 8px black double;
+    border-radius: 8px;
+    background-color: white;
+    overflow: visible;
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    gap: 5px;
+    padding: 10px;
+}
+
 /*
     Hardgecodete Platzierung der Elemente auf der Karte
 */
@@ -292,7 +324,446 @@ html{
     padding: 12px;
     text-align: center;
     border-radius: 4px;
+    max-width: 170px;
     background-color: white;
-    display: inline;
     border: 4px black double;
 }
+
+/*
+    CSS-Elemente für Verdächtigen- und Falllösungs-Panel
+*/
+
+#candidate-1{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-2{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_2.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-3{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_3.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-4{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_4.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-5{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_5.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-6{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_6.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-7{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_7.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-8{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_8.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-9{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_9.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-10{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_10.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-11{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_11.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-12{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_12.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-13{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_13.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-14{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_14.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-15{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_15.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-16{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_16.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-17{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_17.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-18{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_18.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-19{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_19.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-20{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_20.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-21{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_21.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-22{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_22.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-23{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_23.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#candidate-24{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_24.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#murderer-1{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-2{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_2.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-3{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_3.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-4{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_4.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-5{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_5.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-6{
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_6.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-7{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_7.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-8{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_8.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-9{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_9.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-10{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_10.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-11{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_11.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-12{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_12.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-13{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_13.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-14{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_14.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-15{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_15.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-16{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_16.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-17{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_17.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-18{
+    grid-row-start: 3;
+    grid-row-end: 3;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_18.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-19{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    background-image: url('assets/img/candidates/person_19.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-20{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    background-image: url('assets/img/candidates/person_20.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-21{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    background-image: url('assets/img/candidates/person_21.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-22{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 4;
+    grid-column-end: 4;
+    background-image: url('assets/img/candidates/person_22.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-23{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    background-image: url('assets/img/candidates/person_23.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#murderer-24{
+    grid-row-start: 4;
+    grid-row-end: 4;
+    grid-column-start: 6;
+    grid-column-end: 6;
+    background-image: url('assets/img/candidates/person_24.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
