--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ html{
     margin-right: auto;
 }
 
+#clock-div{
+    margin-left: 20%;
+    background-image: url("assets/img/clock/clock_7.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+}
+
 /*
     Overlay-Klasse für Haken und Kreuze
 */
