--- a/style.css
+++ b/style.css
@@ -820,3 +820,8 @@ html{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+#quiz-div{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
